[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rf-survey"
dynamic = ["version"]
description = "Collects baseline measurements of ambient radio frequency (RF) interference using field sensors."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy==1.24.4", # this is dependent upon UHD it needs to be < 2
    "tendo==0.3.0",
    "pydantic==2.12.0",
    "pydantic-settings==2.11.0",
    "pebble==5.1.3",
    "aiohttp==3.13.2",
    "prometheus-client[aiohttp] @ git+https://github.com/prometheus/client_python.git@1783ca87acbed1d45ebaa124b7b22244f9c9c2e8",
    "rf-shared @ git+https://github.com/NSFCUSWIFTPASS/rf-shared.git@v0.2.3",
    "zms-client @ git+https://gitlab.flux.utah.edu/openzms/zms-client-py.git@fd4a5a0902bfe91fad0112c75bf1eb1723d6098d"
]

[project.urls]
source = "https://github.com/NSFCUSWIFTPASS/rf-survey"

[project.scripts]
rf-survey = "rf_survey.main:main"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.version]
path = "src/rf_survey/__about__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/rf_survey"]

[tool.hatch.envs.default]
python = "3.11"

[tool.hatch.envs.test]
dependencies = [
  "pytest",
  "pytest-asyncio",
]

[tool.hatch.envs.test.scripts]
run = "pytest {args:tests}"

[[tool.hatch.envs.test.matrix]]
python = ["3.11"]

[tool.hatch.envs.ci]
template = "test"
# Use built package not source code
dev-mode = false
